demos/bank-of-anthos-asm-manifests/deployment-manifests/accounts-db.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START anthos-service-mesh_bank-of-anthos_statefulset_accounts-db ]
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: accounts-db
  labels:
    app: accounts-db
    tier: db
spec:
  serviceName: "accounts-db"
  replicas: 1
  selector:
    matchLabels:
      app: accounts-db
      tier: db
  template:
    metadata:
      labels:
        app: accounts-db
        tier: db
        version: v0.2.0
    spec:
      containers:
      - name: accounts-db
        image: gcr.io/bank-of-anthos/accounts-db:latest
        ports:
          - containerPort: 5432
            name: postgredb
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 1Gi
        volumeMounts:
        - name: postgresdb
          mountPath: /var/lib/postgresql/data
          subPath: postgres
      volumes:
      - name: postgresdb
        emptyDir: {}
# [END anthos-service-mesh_bank-of-anthos_statefulset_accounts-db ]
---
# [START anthos-service-mesh_bank-of-anthos_service_accounts-db ]
apiVersion: v1
kind: Service
metadata:
  name: accounts-db
  labels:
    app: accounts-db
    tier: db
spec:
  ports:
    - port: 5432
      name: tcp-postgredb
      targetPort: 5432
      protocol: TCP
  selector:
    app: accounts-db
    tier: db
# [END anthos-service-mesh_bank-of-anthos_service_accounts-db ]
---
# [START anthos-service-mesh_bank-of-anthos_virtualservice_accounts-db ]
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: accounts-db
spec:
  hosts:
  - accounts-db
  tcp:
  - route:
    - destination:
        host: accounts-db
        subset: v0-2-0
# [END anthos-service-mesh_bank-of-anthos_virtualservice_accounts-db ]
---
# [START anthos-service-mesh_bank-of-anthos_destinationrule_accounts-db-destination ]
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: accounts-db-destination
spec:
  host: accounts-db
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v0-2-0
    labels:
      version: v0.2.0
# [END anthos-service-mesh_bank-of-anthos_destinationrule_accounts-db-destination ]
