demos/bank-of-anthos-asm-manifests/deployment-manifests/contacts.yaml

# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START servicemesh_deployment_manifests_contacts_deployment_contacts]
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contacts
spec:
  selector:
    matchLabels:
      app: contacts
  template:
    metadata:
      labels:
        app: contacts
        version: v0.2.0
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
      - name: contacts
        image: gcr.io/bank-of-anthos-ci/contacts:v0.5.2
        volumeMounts:
        - name: publickey
          mountPath: "/root/.ssh"
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 256Mi
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 10
      volumes:
      - name: publickey
        secret:
          secretName: jwt-key
          items:
          - key: jwtRS256.key.pub
            path: publickey
# [END servicemesh_deployment_manifests_contacts_deployment_contacts]
---
# [START servicemesh_deployment_manifests_contacts_service_contacts]
apiVersion: v1
kind: Service
metadata:
  name: contacts
spec:
  type: ClusterIP
  selector:
    app: contacts
  ports:
  - name: http
    port: 8080
    targetPort: 8080
# [END servicemesh_deployment_manifests_contacts_service_contacts]
---
# [START servicemesh_deployment_manifests_contacts_virtualservice_contacts]
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: contacts
spec:
  hosts:
  - contacts
  http:
  - route:
    - destination:
        host: contacts
        subset: v0-2-0
# [END servicemesh_deployment_manifests_contacts_virtualservice_contacts]
---
# [START servicemesh_deployment_manifests_contacts_destinationrule_contacts_destination]
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: contacts-destination
spec:
  host: contacts
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v0-2-0
    labels:
      version: v0.2.0
# [END servicemesh_deployment_manifests_contacts_destinationrule_contacts_destination]
---
