demos/bank-of-anthos-asm-manifests/deployment-manifests/frontend.yaml

# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START servicemesh_deployment_manifests_frontend_deployment_frontend]
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        version: v0.2.0
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
      - name: front
        image: gcr.io/bank-of-anthos-ci/frontend:latest
        volumeMounts:
        - name: publickey
          mountPath: "/root/.ssh"
          readOnly: true
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 10
        livenessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 15
          timeoutSeconds: 30
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 256Mi
      volumes:
      - name: publickey
        secret:
          secretName: jwt-key
          items:
          - key: jwtRS256.key.pub
            path: publickey
# [END servicemesh_deployment_manifests_frontend_deployment_frontend]
---
# [START servicemesh_deployment_manifests_frontend_service_frontend]
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 8080
# [END servicemesh_deployment_manifests_frontend_service_frontend]
---
# [START servicemesh_deployment_manifests_frontend_virtualservice_frontend]
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - '*'
  gateways:
  - bank-of-anthos-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend
        subset: v0-2-0
# [END servicemesh_deployment_manifests_frontend_virtualservice_frontend]
---
# [START servicemesh_deployment_manifests_frontend_destinationrule_frontend_destination]
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: frontend-destination
spec:
  host: frontend
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v0-2-0
    labels:
      version: v0.2.0
# [END servicemesh_deployment_manifests_frontend_destinationrule_frontend_destination]
---
