demos/bank-of-anthos-asm-manifests/deployment-manifests/ledger-db.yaml

# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START servicemesh_bank_of_anthos_asm_manifests_deployment_manifests_statefulset_ledger_db]
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: ledger-db
spec:
  serviceName: ledger-db
  replicas: 1
  selector:
    matchLabels:
      app: ledger-db
  template:
    metadata:
      labels:
        app: ledger-db
        version: v0.2.0
    spec:
      containers:
      - name: postgres
        image: gcr.io/bank-of-anthos/ledger-db:latest
        ports:
        - containerPort: 5432
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1Gi
        volumeMounts:
        - name: postgresdb
          mountPath: /var/lib/postgresql/data
          subPath: postgres
      volumes:
      - name: postgresdb
        emptyDir: {}
# [END servicemesh_bank_of_anthos_asm_manifests_deployment_manifests_statefulset_ledger_db]
---
# [START servicemesh_bank_of_anthos_asm_manifests_deployment_manifests_service_ledger_db]
apiVersion: v1
kind: Service
metadata:
  name: ledger-db
spec:
  type: ClusterIP
  selector:
    app: ledger-db
  ports:
  - name: tcp-postgres
    port: 5432
    targetPort: 5432
# [END servicemesh_bank_of_anthos_asm_manifests_deployment_manifests_service_ledger_db]
---
# [START servicemesh_bank_of_anthos_asm_manifests_deployment_manifests_virtualservice_ledger_db]
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ledger-db
spec:
  hosts:
  - ledger-db
  tcp:
  - route:
    - destination:
        host: ledger-db
        subset: v0-2-0
# [END servicemesh_bank_of_anthos_asm_manifests_deployment_manifests_virtualservice_ledger_db]
---
# [START servicemesh_bank_of_anthos_asm_manifests_deployment_manifests_destinationrule_ledger_db_destination]
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: ledger-db-destination
spec:
  host: ledger-db
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v0-2-0
    labels:
      version: v0.2.0
# [END servicemesh_bank_of_anthos_asm_manifests_deployment_manifests_destinationrule_ledger_db_destination]
---
