demos/bank-of-anthos-asm-manifests/deployment-manifests/ledger-writer.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START anthos-service-mesh_bank-of-anthos_deployment_ledgerwriter ]
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledgerwriter
spec:
  selector:
    matchLabels:
      app: ledgerwriter
  template:
    metadata:
      labels:
        app: ledgerwriter
        version: v0.2.0
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: writer
        image: gcr.io/bank-of-anthos/ledgerwriter:latest
        volumeMounts:
        - name: publickey
          mountPath: "/root/.ssh"
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1Gi
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: publickey
        secret:
          secretName: jwt-key
          items:
          - key: jwtRS256.key.pub
            path: publickey
# [END anthos-service-mesh_bank-of-anthos_deployment_ledgerwriter ]
---
# [START anthos-service-mesh_bank-of-anthos_service_ledgerwriter ]
apiVersion: v1
kind: Service
metadata:
  name: ledgerwriter
spec:
  type: ClusterIP
  selector:
    app: ledgerwriter
  ports:
  - name: http
    port: 8080
    targetPort: 8080
# [END anthos-service-mesh_bank-of-anthos_service_ledgerwriter ]
---
# [START anthos-service-mesh_bank-of-anthos_virtualservice_ledgerwriter ]
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ledgerwriter
spec:
  hosts:
  - ledgerwriter
  http:
  - route:
    - destination:
        host: ledgerwriter
        subset: v0-2-0
# [END anthos-service-mesh_bank-of-anthos_virtualservice_ledgerwriter ]
---
# [START anthos-service-mesh_bank-of-anthos_destinationrule_ledgerwriter-destination ]
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: ledgerwriter-destination
spec:
  host: ledgerwriter
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v0-2-0
    labels:
      version: v0.2.0
# [END anthos-service-mesh_bank-of-anthos_destinationrule_ledgerwriter-destination ]
