demos/bank-of-anthos-asm-manifests/deployment-manifests/transaction-history.yaml

# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START servicemesh_deployment_manifests_transaction_history_deployment_transactionhistory]
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactionhistory
spec:
  selector:
    matchLabels:
      app: transactionhistory
  template:
    metadata:
      labels:
        app: transactionhistory
        version: v0.2.0
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: history
        image: gcr.io/bank-of-anthos/transactionhistory:latest
        volumeMounts:
        - name: publickey
          mountPath: /root/.ssh
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1Gi
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthy
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 5
      volumes:
      - name: publickey
        secret:
          secretName: jwt-key
          items:
          - key: jwtRS256.key.pub
            path: publickey
# [END servicemesh_deployment_manifests_transaction_history_deployment_transactionhistory]
---
# [START servicemesh_deployment_manifests_transaction_history_service_transactionhistory]
apiVersion: v1
kind: Service
metadata:
  name: transactionhistory
spec:
  type: ClusterIP
  selector:
    app: transactionhistory
  ports:
  - name: http
    port: 8080
    targetPort: 8080
# [END servicemesh_deployment_manifests_transaction_history_service_transactionhistory]
---
# [START servicemesh_deployment_manifests_transaction_history_virtualservice_transactionhistory]
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: transactionhistory
spec:
  hosts:
  - transactionhistory
  http:
  - route:
    - destination:
        host: transactionhistory
        subset: v0-2-0
# [END servicemesh_deployment_manifests_transaction_history_virtualservice_transactionhistory]
---
# [START servicemesh_deployment_manifests_transaction_history_destinationrule_transactionhistory_destination]
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: transactionhistory-destination
spec:
  host: transactionhistory
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v0-2-0
    labels:
      version: v0.2.0
# [END servicemesh_deployment_manifests_transaction_history_destinationrule_transactionhistory_destination]
---
